<resources>
    <string name="app_name" translatable="false">TaskCheck</string>
    <string name="date">Date</string>
    <string name="your_tasks">Your Tasks:</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">Add</string>
    <string name="clear_all">Clear All</string>
    <string name="how_do_i_mark_task_as_complete_again">How do I mark a task as complete again?</string>
    <string name="howto_mark_complete">Long Tap on a task to mark it as complete!</string>
    <string name="no_due_date">No due date!</string>
    <string name="add_due_date">Add Due Date</string>
    <string name="no_due_time">No due time!</string>
    <string name="urgent">Urgent</string>
    <string name="rushed">Rushed</string>
    <string name="regular">Regular</string>
    <string name="no_task_priority_assigned">No priority!</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_priority">Sort by priority</string>
    <string name="sort_by">Sort By</string>
</resources>