<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_your_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#0064FFDA"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_your_tasks">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/edit_text_task_description"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:autofillHints="@string/task_description"
        android:ems="10"
        android:hint="@string/task_description"
        android:inputType="textShortMessage"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_add_task"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#FFD600"
        android:contentDescription="@string/add_due_date"
        android:cropToPadding="false"
        android:onClick="showTimePickerDialog"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add_task_priority"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_baseline_access_time_28" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#FFD600"
        android:contentDescription="@string/add_due_date"
        android:cropToPadding="false"
        android:onClick="showDatePickerDialog"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_date_range_28" />

    <ImageButton
        android:id="@+id/button_add_task_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#FFD600"
        android:contentDescription="@string/add_due_date"
        android:cropToPadding="false"
        android:onClick="showPriorityMenu"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_priority_high_24" />

    <Button
        android:id="@+id/button_add_task"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="addTask"
        android:text="@string/add_task"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#1E88E5"
        app:iconTint="#039BE5"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_text_task_description"
        app:rippleColor="#1E88E5"
        app:strokeColor="#1E88E5" />


</androidx.constraintlayout.widget.ConstraintLayout>